# fabopsy_ufanet

./: .gitignore  LICENSE  README.md  demo.py  five_pts_alignment.py  pyproject.toml
fabopsy_ufanet/: __init__.py  core.py  five_pts_alignment.py  reg_mae_3token_cross_attention_v4.py
fabopsy_ufanet/face_align/: crop_5pts_vipl_256.py  matlab_cp2tform.py
fabopsy_ufanet/util/: __init__.py  layers.py  pos_embed.py
face_align/: crop_5pts_vipl_256.py
